# Training-Tiny-Models

./: pyproject.toml
cmd/: finetune.py
scripts/: run_finetune.sh
src/payment_classifier/llm/: __init__.py  base.py  litellm.py  settings.py
src/payment_classifier/prompts/: __init__.py  base.py  constant.py  inmemory_prompt_manager.py
training/: convert_to_payment_action.py  filter_non_payment.py  filter_payment.py  gen_payment_request.py  label_ds.py  make_dataset.py  nonpayment_generation.py  payment_intent_generation.py  settings.py
training/config/: settings.py
training/constant/: seed.py
training/data/: dataset.json  eval_dataset.json
training/notebooks/: change_label_value.ipynb  classification-finetune.ipynb  random-human-sms.json  test-dataset.ipynb  test-model.ipynb
